# task-manager

./: .flake8  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: my_check_django.yml
task_manager/: settings.py  urls.py  utilities.py  views.py
task_manager/labeles/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labeles/migrations/: 0001_initial.py
task_manager/labels/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_labels_name.py  0002_alter_labels_options.py  0003_rename_label_labels_tasks.py  0004_alter_labels_options_remove_labels_tasks.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_statuses_name.py  0002_rename_created_statuses_created_at.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_tasks_options.py  0002_initial.py  0003_alter_tasks_author.py  0003_alter_tasks_task.py  0003_labelfortask_tasks_labels.py  0004_alter_tasks_author.py  0004_alter_tasks_options.py  0004_remove_tasks_labels_tasks_label.py  0005_alter_tasks_description_alter_tasks_task_name.py  0005_rename_label_labelfortask_labels_remove_tasks_label_and_more.py  0006_alter_tasks_performer_alter_tasks_status.py  0006_rename_task_tasks_name_alter_tasks_executor.py
task_manager/templates/: 404.html  500.html  base.html  delete.html  index.html  login.html  login1.html  navbar.html
task_manager/templates/labeles/: labeles.html
task_manager/templates/labels/: delete.html  labels.html
task_manager/templates/statuses/: create.html  delete.html  statuses.html
task_manager/templates/users/: c.html  (+6 more)
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
(+7 files in other folders)
