[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["sidnnov <sidnnov@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/sidnnov/python-project-52"

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.2"
python-dotenv = "^1.0.0"
dj-database-url = "^1.3.0"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
