[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["sidnnov <sidnnov@gmail.com>"]
packages = [{include = "task_manager"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Framework :: Django",
    "Topic :: Internet",
]
repository = "https://github.com/sidnnov/python-project-52"

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.2"
python-dotenv = "^1.0.0"
dj-database-url = "0.5.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
django-bootstrap4 = "^23.1"
django-extensions = "^3.2.1"
django-filter = "^23.2"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
